--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -46,6 +46,24 @@ table {
   }
 }
 .container {
-
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr;
   padding: 16px;
+  grid-gap: 32px;
+  & .form> form {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
+}
+
+@media (min-width: 992px) {
+
+.container {
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  padding: 16px;
+  grid-gap: 8px;
+}
 }
